--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -29,9 +29,11 @@
 .post-type-advanced_ads #advanced-ad-conditions {
     text-align: left;
 }
+.post-type-advanced_ads h5 { font-size: 1.2em; margin: 1em 0 .5em; }
 .post-type-advanced_ads #ad-display-box label { margin-right: 1em; }
 .post-type-advanced_ads .advads-conditions-all { display: block; }
-.post-type-advanced_ads .advads-conditions-single.disabled { opacity: .5; }
+.post-type-advanced_ads .advads-conditions-single { margin-bottom: 10px; padding: 10px; }
+.post-type-advanced_ads .advads-conditions-single.disabled { display: none; opacity: .5; }
 .post-type-advanced_ads #advads-ad-content-plain {
     width: 100%;
 }
