--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -31,6 +31,8 @@
     margin: 0;
     padding: 10px 10px 5px;
 }
+.post-type-advanced_ads #advads-ad-description p { font-style: italic; }
+.post-type-advanced_ads #advads-ad-description textarea { display: none; width: 100%; height: 10em; }
 #advanced-ad-type .description {
     display: block;
     margin-left: 24px;
