--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -100,3 +100,11 @@
 .advads-toggle-link { cursor: pointer; }
 .advads-content-half { float: left; margin-right: 5%; width: 45%; min-width: 300px; }
 .advads-box { margin-bottom: 20px; padding: 10px; background: #fff; border: solid 1px; }
+
+/**
+- GOOGLE ADSENSE MODULE
+-*/
+#pastecode-div { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); z-index: 250000; }
+#pastecode-container { width: 480px; margin: 85px auto 0 auto; background-color: #fff; padding: 2%; overflow-x : scroll; overflow-y : scroll; border: 5px solid #dcdcdc; border-radius: 5px; }
+#adsense-ad-param-error { color: red; font-weight: bold; }
+
