--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1,4 +1,10 @@
 /**
+* DASHBOARD WIDGET
+*/
+#advads_dashboard_widget a.rsswidget { font-weight: 400; }
+#advads_dashboard_widget .rss-widget ul li { margin-bottom: 6px; }
+
+/**
 * OVERVIEW PAGE
 */
 
@@ -25,6 +31,8 @@
     margin: 0;
     padding: 10px 10px 5px;
 }
+.post-type-advanced_ads #advads-ad-description p { font-style: italic; }
+.post-type-advanced_ads #advads-ad-description textarea { display: none; width: 100%; height: 10em; }
 #advanced-ad-type .description {
     display: block;
     margin-left: 24px;
@@ -42,6 +50,7 @@
 .post-type-advanced_ads .advads-conditions-all { display: block; }
 .post-type-advanced_ads .advads-conditions-single { margin-bottom: 10px; padding: 10px; }
 .post-type-advanced_ads .advads-conditions-single.disabled { display: none; opacity: .5; }
+.post-type-advanced_ads .advads-conditions-single th { vertical-align: top; }
 .advads-conditions-postids-list li { background: #F1F1F1; padding: 3px; }
 .advads-conditions-postids-list .remove { margin-right: 1em; font-size: .9em; }
 .post-type-advanced_ads #advads-ad-content-plain {
@@ -52,6 +61,13 @@
 .post-type-advanced_ads #advanced-ads-ad-parameters-size p { float: left; margin: 0 1em 0 0; font-weight: bold; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size label + label { margin-left: 1em; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size input { width: 4em; margin-left: .5em; }
+.post-type-advanced_ads #advanced-ad-output .label { display: inline-block; width: 5em; font-weight: bold; }
+.post-type-advanced_ads #advanced-ad-output-position { line-height: 60px; }
+.post-type-advanced_ads #advanced-ad-output-position:after { content: ' '; clear: both; float: none; display: block;}
+.post-type-advanced_ads #advanced-ad-output-position label + label { margin-left: 1em; }
+.post-type-advanced_ads #advanced-ad-output-position img { border: 1px solid #ddd; padding: 2px; }
+.post-type-advanced_ads #advanced-ad-output-margin input[type="number"] { width: 4em; }
+.post-type-advanced_ads #advanced-ad-output-margin label + label { margin-left: 1em; }
 
 .advads-debug-output legend { text-decoration: underline; cursor: pointer; }
 
@@ -75,9 +91,20 @@
 .advads-placements-table th { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table td { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table-options { text-align: right; }
+.advads-placement-options input, .advads-placement-options select { background: transparent; }
+.advads-placements-table-options input[type="number"] { width: 3em; }
+
 /**
  GENERAL ELEMENTS
 */
 .advads-toggle-link { cursor: pointer; }
 .advads-content-half { float: left; margin-right: 5%; width: 45%; min-width: 300px; }
 .advads-box { margin-bottom: 20px; padding: 10px; background: #fff; border: solid 1px; }
+
+/**
+- GOOGLE ADSENSE MODULE
+-*/
+#pastecode-div { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); z-index: 250000; }
+#pastecode-container { width: 480px; margin: 85px auto 0 auto; background-color: #fff; padding: 2%; overflow-x : scroll; overflow-y : scroll; border: 5px solid #dcdcdc; border-radius: 5px; }
+#adsense-ad-param-error { color: red; font-weight: bold; }
+
