--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -19,36 +19,39 @@
 */
 #ad-main-box { overflow: hidden; }
 .post-type-advanced_ads #poststuff .meta-box-sortables .inside {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 .post-type-advanced_ads .meta-box-sortables .inside > * {
-    margin: 20px 10px;
+	margin: 20px 10px;
 }
 .post-type-advanced_ads .meta-box-sortables .inside h4 {
-    background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1;
-    margin: 0;
-    padding: 10px 10px 5px;
+	background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 1;
+	margin: 0;
+	padding: 10px 10px 5px;
 }
 .post-type-advanced_ads #advads-ad-description p { font-style: italic; }
 .post-type-advanced_ads #advads-ad-description textarea { display: none; width: 100%; height: 10em; }
 #advanced-ad-type .description {
-    display: block;
-    margin-left: 24px;
+	display: block;
+	margin-left: 24px;
 }
 .post-type-advanced_ads #advanced_ad_content_others textarea {
-    width: 100%;
-    height: 20em;
+	width: 100%;
+	height: 20em;
 }
 
 .post-type-advanced_ads #advanced-ad-conditions {
-    text-align: left;
+	text-align: left;
 }
 .post-type-advanced_ads h5 { font-size: 1.2em; margin: 1em 0 .5em; }
 .post-type-advanced_ads #ad-display-box label { margin-right: 1em; }
+.post-type-advanced_ads #ad-display-box td, .post-type-advanced_ads #ad-display-box th { padding-right: 10px; }
+.post-type-advanced_ads #ad-display-box .advanced-ads-display-condition-set label { float: left; margin-right: -1px; }
+.post-type-advanced_ads #ad-display-box .advanced-ads-display-condition-set .ui-state-active { border-color: #0074a2; background: #2ea2cc; color: #fff; }
 .post-type-advanced_ads .advads-conditions-all { display: block; }
 .post-type-advanced_ads .advads-conditions-single { margin-bottom: 10px; padding: 10px; }
 .post-type-advanced_ads .advads-conditions-single.disabled { display: none; opacity: .5; }
@@ -56,7 +59,7 @@
 .advads-conditions-postids-list li { background: #F1F1F1; padding: 3px; }
 .advads-conditions-postids-list .remove { margin-right: 1em; font-size: .9em; }
 .post-type-advanced_ads #advads-ad-content-plain {
-    width: 100%;
+	width: 100%;
 }
 .post-type-advanced_ads #ad-parameters-box .advads-ad-parameters-spinner { display: block; float: none; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size { margin-top: 1em; }
@@ -102,6 +105,9 @@
 .advads-toggle-link { cursor: pointer; }
 .advads-content-half { float: left; margin-right: 5%; width: 45%; min-width: 300px; }
 .advads-box { margin-bottom: 20px; padding: 10px; background: #fff; border: solid 1px; }
+.on-hover { display: none; }
+tr:hover .on-hover { display: block; }
+.advads-admin-notices .button-primary { float: right; margin-bottom: 0.5em; }
 
 /**
 - GOOGLE ADSENSE MODULE
@@ -109,4 +115,3 @@
 #pastecode-div { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); z-index: 250000; }
 #pastecode-container { width: 480px; margin: 85px auto 0 auto; background-color: #fff; padding: 2%; overflow-x : scroll; overflow-y : scroll; border: 5px solid #dcdcdc; border-radius: 5px; }
 #adsense-ad-param-error { color: red; font-weight: bold; }
-
