--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1,57 +1,78 @@
 /**
+* DASHBOARD WIDGET
+*/
+#advads_dashboard_widget h4 { margin-top: .5em; }
+#advads_dashboard_widget a.rsswidget { font-weight: 400; }
+#advads_dashboard_widget .rss-widget ul li { margin-bottom: 6px; }
+
+/**
 * OVERVIEW PAGE
 */
-
-.advads-content-wrapper { display: table; width: 100%; }
-.advads-content-left { display: table-cell; min-width: 500px; vertical-align: top; }
-.advads-content-right { display: table-cell; width: 250px; padding: 0 0 0 20px; vertical-align: top; }
+.toplevel_page_advanced-ads #dashboard-widgets .postbox-container { width: 100% !important; }
+.toplevel_page_advanced-ads #dashboard-widgets .postbox-container .postbox { float: left; width: 24%; min-width: 310px; }
+.toplevel_page_advanced-ads #dashboard-widgets .postbox-container .postbox + .postbox { margin-left: 1%; }
+.toplevel_page_advanced-ads #dashboard-widgets .postbox-container .postbox ul.list { list-style: inside; }
+.toplevel_page_advanced-ads .metabox-holder .postbox-container .empty-container { display: none; }
 
 /**
 * AD EDIT PAGE
 */
 #ad-main-box { overflow: hidden; }
 .post-type-advanced_ads #poststuff .meta-box-sortables .inside {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 .post-type-advanced_ads .meta-box-sortables .inside > * {
-    margin: 20px 10px;
+	margin: 20px 10px;
 }
 .post-type-advanced_ads .meta-box-sortables .inside h4 {
-    background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1;
-    margin: 0;
-    padding: 10px 10px 5px;
+	background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 1;
+	margin: 0;
+	padding: 10px 10px 5px;
 }
+.post-type-advanced_ads #advads-ad-description p { font-style: italic; }
+.post-type-advanced_ads #advads-ad-description textarea { display: none; width: 100%; height: 10em; }
 #advanced-ad-type .description {
-    display: block;
-    margin-left: 24px;
+	display: block;
+	margin-left: 24px;
 }
 .post-type-advanced_ads #advanced_ad_content_others textarea {
-    width: 100%;
-    height: 20em;
+	width: 100%;
+	height: 20em;
 }
 
 .post-type-advanced_ads #advanced-ad-conditions {
-    text-align: left;
+	text-align: left;
 }
 .post-type-advanced_ads h5 { font-size: 1.2em; margin: 1em 0 .5em; }
 .post-type-advanced_ads #ad-display-box label { margin-right: 1em; }
+.post-type-advanced_ads #ad-display-box td, .post-type-advanced_ads #ad-display-box th { padding-right: 10px; }
+.post-type-advanced_ads #ad-display-box .advanced-ads-display-condition-set label { float: left; margin-right: -1px; }
+.post-type-advanced_ads #ad-display-box .advanced-ads-display-condition-set .ui-state-active { border-color: #0074a2; background: #2ea2cc; color: #fff; }
 .post-type-advanced_ads .advads-conditions-all { display: block; }
 .post-type-advanced_ads .advads-conditions-single { margin-bottom: 10px; padding: 10px; }
 .post-type-advanced_ads .advads-conditions-single.disabled { display: none; opacity: .5; }
+.post-type-advanced_ads .advads-conditions-single th { vertical-align: top; }
 .advads-conditions-postids-list li { background: #F1F1F1; padding: 3px; }
 .advads-conditions-postids-list .remove { margin-right: 1em; font-size: .9em; }
 .post-type-advanced_ads #advads-ad-content-plain {
-    width: 100%;
+	width: 100%;
 }
 .post-type-advanced_ads #ad-parameters-box .advads-ad-parameters-spinner { display: block; float: none; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size { margin-top: 1em; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size p { float: left; margin: 0 1em 0 0; font-weight: bold; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size label + label { margin-left: 1em; }
 .post-type-advanced_ads #advanced-ads-ad-parameters-size input { width: 4em; margin-left: .5em; }
+.post-type-advanced_ads #advanced-ad-output .label { display: inline-block; width: 5em; font-weight: bold; }
+.post-type-advanced_ads #advanced-ad-output-position { line-height: 60px; }
+.post-type-advanced_ads #advanced-ad-output-position:after { content: ' '; clear: both; float: none; display: block;}
+.post-type-advanced_ads #advanced-ad-output-position label + label { margin-left: 1em; }
+.post-type-advanced_ads #advanced-ad-output-position img { border: 1px solid #ddd; padding: 2px; }
+.post-type-advanced_ads #advanced-ad-output-margin input[type="number"] { width: 4em; }
+.post-type-advanced_ads #advanced-ad-output-margin label + label { margin-left: 1em; }
 
 .advads-debug-output legend { text-decoration: underline; cursor: pointer; }
 
@@ -75,9 +96,22 @@
 .advads-placements-table th { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table td { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table-options { text-align: right; }
+.advads-placement-options input, .advads-placement-options select { background: transparent; }
+.advads-placements-table-options input[type="number"] { width: 3em; }
+
 /**
  GENERAL ELEMENTS
 */
 .advads-toggle-link { cursor: pointer; }
 .advads-content-half { float: left; margin-right: 5%; width: 45%; min-width: 300px; }
 .advads-box { margin-bottom: 20px; padding: 10px; background: #fff; border: solid 1px; }
+.on-hover { display: none; }
+tr:hover .on-hover { display: block; }
+.advads-admin-notices .button-primary { float: right; margin-bottom: 0.5em; }
+
+/**
+- GOOGLE ADSENSE MODULE
+-*/
+#pastecode-div { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); z-index: 250000; }
+#pastecode-container { width: 480px; margin: 85px auto 0 auto; background-color: #fff; padding: 2%; overflow-x : scroll; overflow-y : scroll; border: 5px solid #dcdcdc; border-radius: 5px; }
+#adsense-ad-param-error { color: red; font-weight: bold; }
