--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -96,6 +96,7 @@
 #advads-ad-group-list tbody tr:nth-child(4n+1) { background: #f9f9f9; }
 .advads-ad-group-list-ads li { margin: 0; padding: 3px 0; }
 .advads-ad-group-list-ads li:hover { background: #eee; }
+.advads-ad-group-list-ads i { margin-left: 1em; font-style: italic; }
 .advads-ad-group-list-ads span { float: right; }
 .advads-group-row .row-actions a { cursor: pointer; }
 .advads-group-row .advads-usage { margin-top: 1em; }
@@ -136,3 +137,9 @@ tr:hover .on-hover { display: block; }
 #pastecode-div { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); z-index: 250000; }
 #pastecode-container { width: 480px; margin: 85px auto 0 auto; background-color: #fff; padding: 2%; overflow-x : scroll; overflow-y : scroll; border: 5px solid #dcdcdc; border-radius: 5px; }
 #adsense-ad-param-error { color: red; font-weight: bold; }
+
+/**
+- TABS
+-*/
+.advads-tab { display: none; }
+.advads-tab.active { display: block; }
