--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -65,9 +65,11 @@
 .post-type-advanced_ads #ad-display-box .advads-conditions-terms-buttons .button { margin: 0 -1px .3em 0; padding: 0 .5em; background: #f7f7f7; height: 22px; line-height: 22px; color: #555; border: 1px solid #ccc; border-radius: 0; font-family: inherit; }
 .post-type-advanced_ads #ad-display-box .advads-conditions-terms-buttons label span { margin: 0; padding: 0; line-height: 22px; }
 
-.post-type-advanced_ads #ad-display-box .advads-conditions-terms-buttons .ui-state-active,
-.post-type-advanced_ads #ad-display-box .advads-conditions-terms-buttons .button,
-.post-type-advanced_ads #ad-display-box .advanced-ads-display-condition-set .ui-button.ui-state-active { border-color: #0074a2; background: #2ea2cc; color: #fff; box-shadow: none; }
+.advads-buttonset label span { margin: 0; padding: 0; }
+
+.advads-buttonset .ui-state-active,
+.advads-buttonset .button,
+.advads-buttonset .ui-button.ui-state-active { border-color: #0074a2; background: #2ea2cc; color: #fff; box-shadow: none; }
 
 #ad-display-box .advads-conditions-terms-show-search { height: 22px; line-height: 22px; font-weight: bold; font-size: 1.5em; }
 .advads-conditions-terms-show-search + .description { display: none; }
@@ -87,6 +89,17 @@
 .post-type-advanced_ads #advanced-ad-output-margin label + label { margin-left: 1em; }
 
 .advads-debug-output legend { text-decoration: underline; cursor: pointer; }
+
+#advads-visitor-conditions select,
+#advads-visitor-conditions input { margin: 0; padding: 3px; }
+#advads-visitor-conditions label { float: left; }
+#advads-visitor-conditions select { margin-left: 1em; }
+#advads-visitor-conditions tbody tr:first-child { display: none; }
+#advads-visitor-conditions td { padding: 0 5px; position: relative; top: 0; left: 0; }
+#advads-visitor-conditions td hr { float: right; width: 80%;}
+#advads-visitor-conditions td.advads-visitor-conditions-operator-or > hr { display: none; }
+#advads-visitor-conditions-new .advads-buttonset label { text-transform: uppercase; }
+#advads-visitor-conditions-new .advads-buttonset { float: left; }
 
 /**
  AD GROUP LIST
@@ -112,10 +125,12 @@
 .advads-placements-new-form select { display: inline-block; min-width: 10em; }
 .advads-placements-new-form label { display: inline-block; width: 10em; }
 .advads-placements-new-form input { display: inline-block; }
-.advads-placements-table { min-width: 80%; }
-.advads-placements-table thead tr { background: #fff; }
-.advads-placements-table tbody tr:nth-child(even) { background: #fff; }
+.advads-placements-table { min-width: 80%; border-collapse: collapse; background: #fff; }
+.advads-placements-table tbody tr:nth-child(4n+1) { background: none repeat scroll 0 0 #f9f9f9; }
+.advads-placements-table tbody tr { border-top: 1px solid #f1f1f1; }
 .advads-placements-table th { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
+.advads-placements-table.widefat tbody th { font-weight: bold; }
+.advads-placements-table th span { font-weight: normal; }
 .advads-placements-table td { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table-options { text-align: right; }
 .advads-placement-options input, .advads-placement-options select { background: transparent; }
@@ -130,6 +145,9 @@
 .on-hover { display: none; }
 tr:hover .on-hover { display: block; }
 .advads-admin-notice .button-primary { margin-left: 1em; }
+.advads-admin-notice-inline { padding: 1px 12px; border: 1px solid #0074a2; border-left-width: 4px; }
+.advads-admin-notice-inline p { margin: 0.5em 0; padding: 2px; }
+.advads-spinner { float: none; visibility: visible; }
 
 /**
 - GOOGLE ADSENSE MODULE
