--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -109,10 +109,12 @@
 #advads-visitor-conditions select,
 #advads-visitor-conditions input { margin: 0; padding: 3px; }
 #advads-visitor-conditions label { float: left; }
-#advads-visitor-conditions select { margin-left: 1em; }
 #advads-visitor-conditions tbody tr:first-child { display: none; }
 #advads-visitor-conditions td { padding: 0 5px; position: relative; top: 0; left: 0; }
-#advads-visitor-conditions td hr { float: right; width: 80%;}
+#advads-visitor-conditions td hr { float: right; width: 85%;}
+#advads-visitor-conditions td:nth-child(2) { padding-top: 0.5em; vertical-align: top; font-weight: bold; }
+.advads-visitor-conditions-connector-and,
+.advads-visitor-conditions-connector-or { text-transform: uppercase; }
 #advads-visitor-conditions td.advads-visitor-conditions-operator-or > hr { display: none; }
 #advads-visitor-conditions-new .advads-buttonset label { text-transform: uppercase; }
 #advads-visitor-conditions-new .advads-buttonset { float: left; }
