--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -85,7 +85,7 @@
 
 .advads-buttonset .ui-state-active,
 .advads-buttonset .button,
-.advads-buttonset .ui-button.ui-state-active { border-color: #0074a2; background: #2ea2cc; color: #fff; box-shadow: none; }
+.advads-buttonset .ui-button.ui-state-active { border-color: #0074a2 !important; background: #2ea2cc !important; color: #fff !important; box-shadow: none; }
 
 #ad-display-box .advads-conditions-terms-show-search { height: 22px; line-height: 22px; font-weight: bold; font-size: 1.5em; }
 .advads-conditions-terms-show-search + .description { display: none; }
@@ -109,10 +109,12 @@
 #advads-visitor-conditions select,
 #advads-visitor-conditions input { margin: 0; padding: 3px; }
 #advads-visitor-conditions label { float: left; }
-#advads-visitor-conditions select { margin-left: 1em; }
 #advads-visitor-conditions tbody tr:first-child { display: none; }
 #advads-visitor-conditions td { padding: 0 5px; position: relative; top: 0; left: 0; }
-#advads-visitor-conditions td hr { float: right; width: 80%;}
+#advads-visitor-conditions td hr { float: right; width: 85%;}
+#advads-visitor-conditions td:nth-child(2) { padding-top: 0.5em; vertical-align: top; font-weight: bold; }
+.advads-visitor-conditions-connector-and,
+.advads-visitor-conditions-connector-or { text-transform: uppercase; }
 #advads-visitor-conditions td.advads-visitor-conditions-operator-or > hr { display: none; }
 #advads-visitor-conditions-new .advads-buttonset label { text-transform: uppercase; }
 #advads-visitor-conditions-new .advads-buttonset { float: left; }
@@ -179,3 +181,8 @@ tr:hover .on-hover { display: block; }
 .advads-tab.active { display: block; }
 .advads-license-activate-active { color: green; }
 .advads-license-activate-error { color: red; }
+
+/**
+- GENERAL
+-*/
+.advads-error-message { color: red; }
