--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -74,6 +74,8 @@
 .post-type-advanced_ads .advads-conditions-single th { vertical-align: top; }
 .advads-conditions-postids-list li { background: #F1F1F1; padding: 3px; }
 .advads-conditions-postids-list .remove { margin-right: 1em; font-size: .9em; }
+.advads-conditions-postids-autocomplete-suggestions li span.left { float: left; }
+.advads-conditions-postids-autocomplete-suggestions li span.right { float: right; color: #aaa; font-size: .8em; }
 
 .post-type-advanced_ads #advads-ad-content-plain { width: 100%; }
 .post-type-advanced_ads #ad-display-box .advads-conditions-terms-buttons { display: inline-block; }
@@ -144,7 +146,7 @@
 .advads-new-placement-types { background: #ccc; overflow: hidden; }
 .advads-placement-description { display: none; }
 .advads-placements-new-form .advads-placement-type { position: relative; top: 0; left: 0; float: left; }
-.advads-placements-new-form .advads-placement-type .ui-button { background: none; border-radius: 0; }
+.advads-placements-new-form .advads-placement-type .ui-button { background: none; border-radius: 0; height: auto; }
 .advads-placements-new-form .advads-placement-type .ui-button-text { padding: 0; }
 .advads-placements-new-form .advads-placement-type .ui-button-text img { margin-top: 10px; max-width: 100%; }
 .advads-placements-new-form .advads-placement-type label { display: inline-block; width: 140px; text-align: center; border: 0; padding: 10px; }
@@ -194,4 +196,4 @@ tr:hover .on-hover { display: block; }
 /**
 - GENERAL
 -*/
-.advads-error-message { color: red; }
+.advads-error-message { color: red !important; }
