with Dutch translation and fixes for some placements
git-svn-id: https://plugins.svn.wordpress.org/advanced-ads/trunk@1236356 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -14,6 +14,13 @@
 .toplevel_page_advanced-ads #dashboard-widgets .postbox-container .postbox ul.list { list-style: inside; }
 .toplevel_page_advanced-ads .metabox-holder .postbox-container .empty-container { display: none; }
 
+
+/**
+* INTRO PAGE
+*/
+.admin_page_advanced-ads-intro .feature-section img { border: solid 1px #0074a2; }
+.admin_page_advanced-ads-intro ul { list-style: inside disc; }
+
 /**
 * AD EDIT PAGE
 */
@@ -148,11 +155,11 @@
 .advads-placements-new-form .advads-placement-type { position: relative; top: 0; left: 0; float: left; }
 .advads-placements-new-form .advads-placement-type .ui-button { background: none; border-radius: 0; height: auto; }
 .advads-placements-new-form .advads-placement-type .ui-button-text { padding: 0; }
-.advads-placements-new-form .advads-placement-type .ui-button-text img { margin-top: 10px; max-width: 100%; }
+.advads-placements-new-form .advads-placement-type .ui-button-text img { margin-top: 10px; max-width: 100%; pointer-events: none; }
 .advads-placements-new-form .advads-placement-type label { display: inline-block; width: 140px; text-align: center; border: 0; padding: 10px; }
 .advads-placements-new-form .advads-placement-type label .description { padding: 10px; }
+.advads-placements-new-form .advads-error-message { display: none; }
 .advads-placements-table { min-width: 80%; border-collapse: collapse; background: #fff; }
-.advads-placements-table tbody tr:nth-child(4n+1) { background: none repeat scroll 0 0 #f9f9f9; }
 .advads-placements-table tbody tr { border-top: 1px solid #f1f1f1; }
 .advads-placements-table th { margin: 0; padding: 10px; text-align: left; vertical-align: top; }
 .advads-placements-table.widefat tbody th { font-weight: bold; }
