--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -226,3 +226,14 @@ tr:hover .on-hover { display: block; }
 - GENERAL
 -*/
 .advads-error-message { color: red !important; }
+
+/* Image Ad */
+#advads_type_image_wp_media .media-sidebar .setting:not([data-setting="title"]):not([data-setting="alt"]),
+/* fields added via the `attachment_fields_to_edit` filter */
+#advads_type_image_wp_media .media-sidebar .compat-item { display: none; }
+
+/* TinyMCE shortcode creator */
+#advads-shortcode-modal-container-body .spinner { background: url(../../../../../../wp-admin/images/spinner.gif) no-repeat; -webkit-background-size: 20px 20px; background-size: 20px 20px; vertical-align: middle; width: 20px; height: 20px; }
+#advads-select-for-shortcode { box-sizing: border-box; }
+#advads-select-for-shortcode optgroup { font-weight: 700; font-family: Tahoma, sans-serif; }
+#advads-select-for-shortcode optgroup option { padding-left: 20px; }
